Refacotring to separate service classes + generic interface
