# server/api/Controllers/AuthorController.cs
@@ -4,26 +4,41 @@ using Microsoft.AspNetCore.Mvc;
 
 namespace api.Controllers;
 
-public class AuthorController(ILibraryService libraryService) : ControllerBase
+public class AuthorController: ControllerBase
 {
+    private readonly ILibraryService<AuthorDto, CreateAuthorDto, UpdateAuthorDto> _libraryService;
+
+    public AuthorController(ILibraryService<AuthorDto, CreateAuthorDto, UpdateAuthorDto> libraryService)
+    {
+        _libraryService = libraryService;
+    }
+    
     [HttpGet(nameof(GetAllAuthors))]
     public async Task<ActionResult<AuthorDto>> GetAllAuthors(AuthorDto dto)
     {
-        var authors = await libraryService.GetAllAuthors();
+        var authors = await _libraryService.GetAll();
         return Ok(authors);
     }
 
     [HttpPost(nameof(CreateAuthor))]
     public async Task<ActionResult<AuthorDto>> CreateAuthor([FromBody] CreateAuthorDto dto)
     {
-        var result = await libraryService.CreateAuthor(dto);
+        var result = await _libraryService.Create(dto);
         return CreatedAtAction(nameof(GetAllAuthors), new { Id = result.Id }, result);
     }
 
     [HttpPatch(nameof(UpdateAuthor))]
     public async Task<ActionResult<AuthorDto>> UpdateAuthor([FromBody] UpdateAuthorDto dto)
     {
-        var result = await libraryService.UpdateAuthor(dto);
+        var result = await _libraryService.Update(dto);
         return Ok(result);
     }
+
+    [HttpDelete(nameof(DeleteAuthor))]
+    public async Task<ActionResult<AuthorDto>> DeleteAuthor(string id)
+    {
+        var result = await _libraryService.Delete(id);
+        return Ok(result);
+    }
+    
 }
